corrected alignment in book appoinment

--- a/src/components/DoctorProfile/doctorProfile.css
+++ b/src/components/DoctorProfile/doctorProfile.css
@@ -91,7 +91,7 @@ overflow: hidden;
   cursor: pointer;
   color: orange;
   left: -90px;
-  top: 120px;
+  top: 135px;
 }
 .arrow-doctor-one:disabled {
   color: orange;
@@ -433,7 +433,7 @@ z-index: 1;
 display: flex; 
 flex-direction: column;
 
-top:10% !important;
+top:4% !important;
 width: 100%;
 max-width: 440px;
 margin-left: auto;
@@ -2515,8 +2515,8 @@ top:  -160px;
 
     display: flex; 
     flex-direction: column;
-    left: 0% !important;
-    top:70%;
+    left: -5% !important;
+    top:4% !important;
     width: 440px;
 margin-left: auto;
 margin-right: auto;
@@ -2670,8 +2670,8 @@ left: 0px;
   
   width: 440px;
 height: 409px;
-top: -204%;
-left: 950px;
+top: 4% !important;
+left: 130px !important;
 border-radius: 15px;
 background: #ffffff;
 border: 1px solid #0000001A;
